--- a/study-notes.html
+++ b/study-notes.html
@@ -56,10 +56,10 @@
 
     <!-- 侧边栏 -->
     <div class="sidebar">
-      
+
     </div>
 
-    <div class="bottom">
+    <div class="bottom unhome-padding">
       <div class="bottom-contact ">
         <div class="contact-title">联系方式</div>
         <div class="contact-message">手机：13867908869</div>
