--- a/index.html
+++ b/index.html
@@ -1,95 +1,92 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Hu Zanlai Website</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1,
+			user-scalable=no"
+    />
+    <link rel="stylesheet" href="assets/css/main.css" />
+  </head>
 
-<head>
-  <title>Hu Zanlai Website</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1,
-			user-scalable=no" />
-  <link rel="stylesheet" href="assets/css/main.css" />
-</head>
-
-<body class="body-style">
-  <div>
-
-    <!-- Header -->
-    <div class="news">
-      <div class="news-text">
-        ❤️❤️❤️小站初建成，有bug还请多见谅！手机尺寸适配仍在调试中，请使用电脑端chrome/safari访问来获得最佳体验！❤️❤️❤️
+  <body class="body-style">
+    <div>
+      <!-- Header -->
+      <div class="news">
+        <div class="news-text">
+          ❤️❤️❤️小站初建成，有bug还请多见谅！手机尺寸适配仍在调试中，请使用电脑端chrome/safari访问来获得最佳体验！❤️❤️❤️
+        </div>
       </div>
-    </div>
 
-    <!-- header -->
-    <div class="navigation">
-      <div class="navigation-content">
-        <!-- 宇航员 -->
-        <div class="profile">
-          <div class="profile-pic">
+      <!-- header -->
+      <div class="navigation">
+        <div class="navigation-content">
+          <!-- 宇航员 -->
+          <div class="profile">
+            <div class="profile-pic"></div>
+          </div>
+          <!-- 名字 -->
+          <div class="logo logo1">Hu <br />Zanlai</div>
+          <!-- 导航 -->
+          <div class="navigation-choice">
+            <a href="index.html">
+              <div class="choice choice-focused">主页</div>
+            </a>
+            <a href="study-notes.html">
+              <div class="choice">学习笔记</div>
+            </a>
+            <a href="">
+              <div class="choice">专业技能</div>
+            </a>
+            <a href="">
+              <div class="choice">项目经历</div>
+            </a>
+            <a href="">
+              <div class="choice">关于本站</div>
+            </a>
+            <!-- github logo -->
+            <a href="https://github.com/zanlaihu">
+              <div class="github"></div>
+            </a>
           </div>
         </div>
-        <!-- 名字 -->
-        <div class="logo logo1">Hu <br>Zanlai</div>
-        <!-- 导航 -->
-        <div class="navigation-choice">
-          <a href="index.html">
-            <div class="choice choice-focused">主页</div>
-          </a>
-          <a href="study-notes.html">
-            <div class="choice">学习笔记</div>
-          </a>
-          <a href="">
-            <div class="choice">专业技能</div>
-          </a>
-          <a href="">
-            <div class="choice">项目经历</div>
-          </a>
-          <a href="">
-            <div class="choice">关于本站</div>
-          </a>
-          <!-- github logo -->
-          <a href="https://github.com/zanlaihu">
-            <div class="github"></div>
-          </a>
-        </div>
       </div>
-    </div>
 
-    <!-- 首页的彩色背景介绍 -->
-    <div class="home-ins">
-      <div class="ins-content">
-        <div class="ins-left">
+      <!-- 首页的彩色背景介绍 -->
+      <div class="home-ins">
+        <div class="ins-content">
+          <div class="ins-left">
+            <div class="ins-news">
+              <div class="ins-news-logo">最新</div>
+              <div class="ins-news-title">小破站的艰辛建站史</div>
+              <div class="ins-arrow"></div>
+            </div>
 
-          <div class="ins-news">
-            <div class="ins-news-logo">最新</div>
-            <div class="ins-news-title">小破站的艰辛建站史</div>
-            <div class="ins-arrow"></div>
+            <div class="ins-title">因为兴趣使然而建立的小站</div>
+            <div class="ins-ins">
+              秉承着“程序员应该多做事少说话”的原则而建立的站点。用于放置学习笔记、项目经验总结、技能清单、以及最右边小小的GitHub链接。快点击顶部的导航来选择感兴趣的内容吧！
+            </div>
+            <div class="ins-search"></div>
           </div>
-
-          <div class="ins-title">因为兴趣使然而建立的小站</div>
-          <div class="ins-ins">秉承着“程序员应该多做事少说话”的原则而建立的站点。用于放置学习笔记、项目经验总结、技能清单、以及最右边小小的GitHub链接。快点击顶部的导航来选择感兴趣的内容吧！</div>
-          <div class="ins-search"></div>
+          <div class="ins-right"></div>
         </div>
-        <div class="ins-right"></div>
+      </div>
+
+      <div class="bottom">
+        <div class="bottom-contact">
+          <div class="contact-title">联系方式</div>
+          <div class="contact-message">手机：13867908869</div>
+          <div class="contact-message">微信：13867908869</div>
+          <div class="contact-message">邮箱：klaus@outlook.com</div>
+        </div>
+        <div class="bottom-line"></div>
+        <div class="bottom-logo">
+          <div class="profile-pic"></div>
+        </div>
+        <div class="bottom-label">Made with ❤️ by Zanlai.</div>
       </div>
     </div>
-
-
-
-    <div class="bottom">
-      <div class="previous-title home-bottom-special"></div>
-      <div class="bottom-contact ">
-        <div class="contact-title">联系方式</div>
-        <div class="contact-message">手机：13867908869</div>
-        <div class="contact-message">微信：13867908869</div>
-        <div class="contact-message">邮箱：klaus@outlook.com</div>
-      </div>
-      <div class="bottom-line"></div>
-      <div class="bottom-logo">
-        <div class="profile-pic"></div>
-      </div>
-      <div class="bottom-label">Made with ❤️ by Zanlai.</div>
-    </div>
-  </div>
-</body>
-
+  </body>
 </html>
