--- a/study-notes.html
+++ b/study-notes.html
@@ -1,87 +1,87 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Hu Zanlai Website</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1,
+			user-scalable=no"
+    />
+    <link rel="stylesheet" href="assets/css/main.css" />
+  </head>
 
-<head>
-  <title>Hu Zanlai Website</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1,
-			user-scalable=no" />
-  <link rel="stylesheet" href="assets/css/main.css" />
-</head>
-
-<body class="body-style">
-  <div>
-
-    <!-- Header -->
-    <div class="news">
-      <div class="news-text">
-        ❤️❤️❤️小站初建成，有bug还请多见谅！手机尺寸适配仍在调试中，请使用电脑端chrome/safari访问来获得最佳体验！❤️❤️❤️
+  <body class="body-style">
+    <div>
+      <!-- Header -->
+      <div class="news">
+        <div class="news-text">
+          ❤️❤️❤️小站初建成，有bug还请多见谅！手机尺寸适配仍在调试中，请使用电脑端chrome/safari访问来获得最佳体验！❤️❤️❤️
+        </div>
       </div>
-    </div>
 
-    <!-- header -->
-    <div class="navigation navigation-unhome">
-      <div class="navigation-content">
-        <!-- 宇航员 -->
-        <div class="profile">
-          <div class="profile-pic">
+      <!-- header -->
+      <div class="navigation navigation-unhome">
+        <div class="navigation-content">
+          <!-- 宇航员 -->
+          <div class="profile">
+            <div class="profile-pic"></div>
+          </div>
+          <!-- 名字 -->
+          <div class="logo logo1">Hu <br />Zanlai</div>
+          <!-- 导航 -->
+          <div class="navigation-choice">
+            <a href="index.html">
+              <div class="unhome-choice">主页</div>
+            </a>
+            <a href="study-notes.html">
+              <div class="unhome-focused unhome-choice">学习笔记</div>
+            </a>
+            <a href="">
+              <div class="unhome-choice">专业技能</div>
+            </a>
+            <a href="">
+              <div class="unhome-choice">项目经历</div>
+            </a>
+            <a href="">
+              <div class="unhome-choice">关于本站</div>
+            </a>
+            <!-- github logo -->
+            <a href="https://github.com/zanlaihu">
+              <div class="github"></div>
+            </a>
           </div>
         </div>
-        <!-- 名字 -->
-        <div class="logo logo1">Hu <br>Zanlai</div>
-        <!-- 导航 -->
-        <div class="navigation-choice">
-          <a href="index.html">
-            <div class="choice ">主页</div>
-          </a>
-          <a href="study-notes.html">
-            <div class="choice choice-focused">学习笔记</div>
-          </a>
-          <a href="">
-            <div class="choice">专业技能</div>
-          </a>
-          <a href="">
-            <div class="choice">项目经历</div>
-          </a>
-          <a href="">
-            <div class="choice">关于本站</div>
-          </a>
-          <!-- github logo -->
-          <a href="https://github.com/zanlaihu">
-            <div class="github"></div>
-          </a>
+      </div>
+
+      <!-- 侧边栏 -->
+      <div class="sidebar">
+        <div class="">JavaScript</div>
+        <div class="">1 什么是JavaScript</div>
+        <div class="">2 script标签</div>
+        <div class="">3 语法</div>
+        <div class="">4 var,let,const</div>
+        <div class="">5 数据类型</div>
+        <div class="">6 对象</div>
+        <div class="">7 操作符</div>
+        <div class="">8 语句</div>
+      </div>
+
+      <div class="right-content">
+        <div class="bottom unhome-padding">
+          <div class="bottom-contact">
+            <div class="contact-title">联系方式</div>
+            <div class="contact-message">手机：13867908869</div>
+            <div class="contact-message">微信：13867908869</div>
+            <div class="contact-message">邮箱：klaus@outlook.com</div>
+          </div>
+          <div class="bottom-line"></div>
+          <div class="bottom-logo">
+            <div class="profile-pic"></div>
+          </div>
+          <div class="bottom-label">Made with ❤️ by Zanlai.</div>
         </div>
       </div>
     </div>
-
-    <!-- 侧边栏 -->
-    <div class="sidebar">
-      <div class="">JavaScript</div>
-      <div class="">1 什么是JavaScript</div>
-      <div class="">2 script标签</div>
-      <div class="">3 语法</div>
-      <div class="">4 var,let,const</div>
-      <div class="">5 数据类型</div>
-      <div class="">6 对象</div>
-      <div class="">7 操作符</div>
-      <div class="">8 语句</div>
-    </div>
-
-    <div class="bottom unhome-padding">
-      <div class="bottom-contact ">
-        <div class="contact-title">联系方式</div>
-        <div class="contact-message">手机：13867908869</div>
-        <div class="contact-message">微信：13867908869</div>
-        <div class="contact-message">邮箱：klaus@outlook.com</div>
-      </div>
-      <div class="bottom-line "></div>
-      <div class="bottom-logo">
-        <div class="profile-pic"></div>
-      </div>
-      <div class="bottom-label">Made with ❤️ by Zanlai.</div>
-    </div>
-
-  </div>
-</body>
-
+  </body>
 </html>
