--- a/study-notes.html
+++ b/study-notes.html
@@ -56,15 +56,15 @@
 
       <!-- 侧边栏 -->
       <div class="sidebar">
-        <div class="">JavaScript</div>
-        <div class="">1 什么是JavaScript</div>
-        <div class="">2 script标签</div>
-        <div class="">3 语法</div>
-        <div class="">4 var,let,const</div>
-        <div class="">5 数据类型</div>
-        <div class="">6 对象</div>
-        <div class="">7 操作符</div>
-        <div class="">8 语句</div>
+        <div class="know-name know-name-focus">JavaScript</div>
+        <div class="chapter">1 什么是JavaScript</div>
+        <div class="chapter">2 script标签</div>
+        <div class="chapter">3 语法</div>
+        <div class="chapter">4 var,let,const</div>
+        <div class="chapter">5 数据类型</div>
+        <div class="chapter">6 对象</div>
+        <div class="chapter">7 操作符</div>
+        <div class="chapter">8 语句</div>
       </div>
 
       <div class="right-content">
