--- a/study-notes/JavaScript/js-1.html
+++ b/study-notes/JavaScript/js-1.html
@@ -90,12 +90,10 @@
         <h1>1.什么是JavaScript</h1>
         <h2>JavaScript 的诞生</h2>
         <p>
-          JavaScript 问世之初的主要功能是代替 perl。</p>
+          JavaScript 问世之初的主要功能是代替 perl等服务端语言。</p>
         <p>
-          等服务端语言。曾经，验证输入框内容都需要与服务器进行一次往返通信。因此，网景将 JavaScript
-          加入到 navigator 浏览器中，从而在客户端就可以进行验证。
-          而现在，JavaScript
-          已经是公认的主流编程语言。应用也不再局限于单纯的验证，而是可以实现复杂的计算与交互。几乎所有的软件和硬件设备都支持它。
+          在那个年代，验证输入框内容都需要与服务器进行一次往返通信。为了在客户端就可以进行验证，网景将 JavaScript加入到 navigator 浏览器中。
+          而现在，JavaScript已经是公认的主流编程语言，也不再局限于单纯的验证，而是可以实现复杂的计算与交互。几乎所有的软件和硬件设备都支持它。
         </p>
         <p>
           网景码农 Brendan Eric 一开始将这门语言命名为
