--- a/study-notes/JavaScript/js-2.html
+++ b/study-notes/JavaScript/js-2.html
@@ -58,7 +58,7 @@
         <div class="know-name know-name-focus">JavaScript</div>
       </a>
       <a href="js-1.html">
-        <div class="chapter ">1 什么是JavaScript</div>
+        <div class="chapter">1 什么是JavaScript</div>
       </a>
       <a href="js-2.html">
         <div class="chapter chapter-choosen">2 script标签</div>
@@ -86,7 +86,35 @@
     <div class="outline"></div>
 
     <div class="right-content">
-      <div class="content-content"></div>
+      <div class="content-content">
+        <h1>&lt;script&gt;标签</h1>
+        <p>&lt;script&gt;元素由网景公司创造，用来将 JavaScript 引入 HTML。它也被纳入 HTML 规范。</p>
+        <h2>&lt;script&gt;有 8 个属性：</h2>
+        <p>src：可选。填入 URL 来引入外部文件中的 JavaScript。</p>
+        <p>defer：可选。延迟运行JavaScript， 可以延迟到整个页面被解析和显示之后再运行。只对外部 JavaScript 文件有效。</p>
+        <p>async：可选。异步执行，表示立刻开始下载 JavaScript，但不必等 JavaScript 下载和执行完再加载页面。只对外部 JavaScript 文件有效。</p>
+        <p>language：废弃。大多数浏览器都会忽略。</p>
+        <p>type：可选。替代 language，表示代码块中 JavaScript 语言的内容类型（也叫 MINE
+          类型）。按照惯例，始终是“text/javascript”（尽管“text/javascript”和“text/ecmascript”已经被废弃）。JavaScript 文件的 MINE
+          类型通常是“application/x-javascript”，不过这个值有可能导致 JavaScript 被忽略。在非 IE 的浏览器中有效的 MINE
+          值还有“application/javascript”和“application/ecmascript”。如果这个值是 module，则代码会被当成 ES6 模块，代码中运行使用 import 和 export 关键字。
+        </p>
+        <p>integrity：可选。允许比对接收到的资源的签名与指定的加密签名以验证子资源完整性（SRI，Subresource Integrity）。如果不匹配则页面报错，JavaScript
+          不执行。这个属性可以确保内容分发网络（CDN，Content Delivery Network）不会提供恶意内容。</p>
+        <p>charset：可选。使用 src 属性指定的代码字符集。大多数浏览器不在乎它的值，所以很少被使用。</p>
+        <p>crossorigin：可选。配置相关请求的 CORS（跨源资源共享）设置。默认不使用
+          CORS。crossorigin="use-credentials"意思是设置凭据标志，这样出站请求会包含凭据。crossorigin="anonymous"意思是配置文件请求不必设置凭据标志。</p>
+
+        <h2>如何使用&lt;script&gt;</h2>
+        <p>直接在网页中嵌入，或引入外部 JavaScript 文件：</p>
+        <pre><code>
+          &lt;script&gt;
+            function sayHi() {
+              console.log("我最棒！");
+            }
+          &lt;/script&gt;
+        </code></pre>
+      </div>
 
       <div class="bottom unhome-padding">
         <div class="bottom-contact">
