--- a/study-notes.html
+++ b/study-notes.html
@@ -172,7 +172,9 @@
         <a href="https://github.com/zanlaihu/study-notes/blob/main/CSS/display.md" target="_blank">
           <div>display</div>
         </a>
-        <a><div>linear-gradient</div></a>
+        <a>
+          <div>linear-gradient</div>
+        </a>
       </div>
       <div class="single-content">
         <a>
@@ -216,15 +218,19 @@
           <a href="https://juejin.cn/post/6978359617017348127/" target="_blank">
             <div>4 事件处理</div>
           </a>
-                    <a href="https://juejin.cn/post/6979028111014756366/" target="_blank">
+          <a href="https://juejin.cn/post/6979028111014756366/" target="_blank">
             <div>5 条件渲染</div>
+          </a>
+          <a href="https://juejin.cn/post/6979223517866754084/" target="_blank">
+            <div>6 列表&key</div>
           </a>
         </div>
         <div class="single-content">
           <a target="">
             <div>Angular</div>
           </a>
-          <a href="https://github.com/zanlaihu/study-notes/blob/main/Angular/1%20%E4%BB%80%E4%B9%88%E6%98%AFAngular.md" target="_blank">
+          <a href="https://github.com/zanlaihu/study-notes/blob/main/Angular/1%20%E4%BB%80%E4%B9%88%E6%98%AFAngular.md"
+            target="_blank">
             <div>1 什么是Angular</div>
           </a>
           <a href="https://github.com/zanlaihu/study-notes/blob/main/Angular/2%20%E7%BB%84%E4%BB%B6.md" target="_blank">
@@ -248,7 +254,8 @@
           <a>
             <div>AJAX</div>
           </a>
-          <a href="https://github.com/zanlaihu/study-notes/blob/main/AJAX/1%20%E4%BB%80%E4%B9%88%E6%98%AFAjax.md" target="_blank">
+          <a href="https://github.com/zanlaihu/study-notes/blob/main/AJAX/1%20%E4%BB%80%E4%B9%88%E6%98%AFAjax.md"
+            target="_blank">
             <div>1 什么是AJAX</div>
           </a>
         </div>
@@ -264,25 +271,32 @@
           <a href="https://github.com/zanlaihu/study-notes/blob/main/JQuery/1.1%20jQuery.md" target="_blank">
             <div>1 什么是jQuery</div>
           </a>
-          <a href="https://github.com/zanlaihu/study-notes/blob/main/JQuery/1.2%20%E8%AF%AD%E6%B3%95.md" target="_blank">
+          <a href="https://github.com/zanlaihu/study-notes/blob/main/JQuery/1.2%20%E8%AF%AD%E6%B3%95.md"
+            target="_blank">
             <div>1.2 语法</div>
           </a>
-          <a href="https://github.com/zanlaihu/study-notes/blob/main/JQuery/1.3%20%E9%80%89%E6%8B%A9%E5%99%A8.md" target="_blank">
+          <a href="https://github.com/zanlaihu/study-notes/blob/main/JQuery/1.3%20%E9%80%89%E6%8B%A9%E5%99%A8.md"
+            target="_blank">
             <div>1.3 选择器</div>
           </a>
-          <a href="https://github.com/zanlaihu/study-notes/blob/main/JQuery/1.4%20%E4%BA%8B%E4%BB%B6.md" target="_blank">
+          <a href="https://github.com/zanlaihu/study-notes/blob/main/JQuery/1.4%20%E4%BA%8B%E4%BB%B6.md"
+            target="_blank">
             <div>1.4 事件</div>
           </a>
-          <a href="https://github.com/zanlaihu/study-notes/blob/main/JQuery/2.1%20%E9%9A%90%E8%97%8F%E5%92%8C%E6%98%BE%E7%A4%BA.md" target="_blank">
+          <a href="https://github.com/zanlaihu/study-notes/blob/main/JQuery/2.1%20%E9%9A%90%E8%97%8F%E5%92%8C%E6%98%BE%E7%A4%BA.md"
+            target="_blank">
             <div>2.1 隐藏和显示</div>
           </a>
-          <a href="https://github.com/zanlaihu/study-notes/blob/main/JQuery/2.2%20%E6%B7%A1%E5%85%A5%E6%B7%A1%E5%87%BA.md" target="_blank">
+          <a href="https://github.com/zanlaihu/study-notes/blob/main/JQuery/2.2%20%E6%B7%A1%E5%85%A5%E6%B7%A1%E5%87%BA.md"
+            target="_blank">
             <div>2.2 淡入淡出</div>
           </a>
-          <a href="https://github.com/zanlaihu/study-notes/blob/main/JQuery/2.3%20%E6%BB%91%E5%8A%A8.md" target="_blank">
+          <a href="https://github.com/zanlaihu/study-notes/blob/main/JQuery/2.3%20%E6%BB%91%E5%8A%A8.md"
+            target="_blank">
             <div>2.3 滑动</div>
           </a>
-          <a href="https://github.com/zanlaihu/study-notes/blob/main/JQuery/2.4%20%E5%8A%A8%E7%94%BB.md" target="_blank">
+          <a href="https://github.com/zanlaihu/study-notes/blob/main/JQuery/2.4%20%E5%8A%A8%E7%94%BB.md"
+            target="_blank">
             <div>2.4 动画/停止动画</div>
           </a>
           <a>
@@ -315,7 +329,8 @@
           <a>
             <div>网络请求与远程资源</div>
           </a>
-          <a href="https://github.com/zanlaihu/study-notes/blob/main/%E8%AE%A1%E7%AE%97%E6%9C%BA%E7%BD%91%E7%BB%9C/%E8%B7%A8%E5%9F%9F.md" target="_blank">
+          <a href="https://github.com/zanlaihu/study-notes/blob/main/%E8%AE%A1%E7%AE%97%E6%9C%BA%E7%BD%91%E7%BB%9C/%E8%B7%A8%E5%9F%9F.md"
+            target="_blank">
             <div>跨域</div>
           </a>
           <!-- <a href="https://github.com/zanlaihu/study-notes/blob/main/计算机网络/跨域资源共享CORS.md" target="_blank">
@@ -341,7 +356,8 @@
           <a>
             <div>应用维护</div>
           </a>
-          <a href="https://github.com/zanlaihu/study-notes/blob/main/React/XX%20%E5%8F%91%E5%B8%83%E6%B8%A0%E9%81%93.md" target="_blank">
+          <a href="https://github.com/zanlaihu/study-notes/blob/main/React/XX%20%E5%8F%91%E5%B8%83%E6%B8%A0%E9%81%93.md"
+            target="_blank">
             <div>版本管理(React为例)</div>
           </a>
         </div>
