--- a/study-notes.html
+++ b/study-notes.html
@@ -143,15 +143,6 @@
       </div>
       <div class="single-content">
         <a>
-          <div>JavaScript中级</div>
-        </a>
-        <a href="https://github.com/zanlaihu/study-notes/blob/main/JavaScript/%E3%80%8AJavaScript%E9%AB%98%E7%BA%A7%E7%A8%8B%E5%BA%8F%E8%AE%BE%E8%AE%A1%E3%80%8B%E5%92%8CMDN/99.XX%20XMLHttpRequest%E5%AF%B9%E8%B1%A1.md"
-          target="_blank">
-          <div>XMLHttpRequest对象</div>
-        </a>
-      </div>
-      <div class="single-content">
-        <a>
           <div>CSS</div>
         </a>
         <a href="https://juejin.cn/post/6949846494912446495/" target="_blank">
@@ -239,25 +230,7 @@
       </div>
       <div class="full-index-content">
         <div class="single-content-title">前端技术/库</div>
-        <div class="single-content">
-          <a>
-            <div>Redux</div>
-          </a>
-          <a href="https://github.com/zanlaihu/study-notes/blob/main/Redux/1%20%E4%BB%80%E4%B9%88%E6%98%AFRedux.md"
-            target="_blank">
-            <div>1 什么是Redux</div>
-          </a>
-        </div>
 
-        <div class="single-content">
-          <a>
-            <div>AJAX</div>
-          </a>
-          <a href="https://github.com/zanlaihu/study-notes/blob/main/AJAX/1%20%E4%BB%80%E4%B9%88%E6%98%AFAjax.md"
-            target="_blank">
-            <div>1 什么是AJAX</div>
-          </a>
-        </div>
         <!-- <div class="single-content">
           <a>
             <div>Akita</div>
@@ -318,6 +291,29 @@
           </a>
           <a>
             <div>jQuery的不足</div>
+          </a>
+        </div>
+        <div class="single-content">
+          <a>
+            <div>Redux</div>
+          </a>
+          <a href="https://github.com/zanlaihu/study-notes/blob/main/Redux/1%20%E4%BB%80%E4%B9%88%E6%98%AFRedux.md"
+            target="_blank">
+            <div>1 什么是Redux</div>
+          </a>
+        </div>
+
+        <div class="single-content">
+          <a>
+            <div>AJAX & XMLHttpRequest对象</div>
+          </a>
+          <a href="https://github.com/zanlaihu/study-notes/blob/main/AJAX/1%20%E4%BB%80%E4%B9%88%E6%98%AFAjax.md"
+            target="_blank">
+            <div>1 什么是AJAX</div>
+          </a>
+          <a href="https://github.com/zanlaihu/study-notes/blob/main/JavaScript/%E3%80%8AJavaScript%E9%AB%98%E7%BA%A7%E7%A8%8B%E5%BA%8F%E8%AE%BE%E8%AE%A1%E3%80%8B%E5%92%8CMDN/99.XX%20XMLHttpRequest%E5%AF%B9%E8%B1%A1.md"
+            target="_blank">
+            <div>2 什么是XMLHttpRequest对象</div>
           </a>
         </div>
       </div>
