--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     </div>
 
     <div class="bar">
-      <div class="first-single-bar single-bar">
+      <div class="up-single-bar single-bar">
         <div class="single-bar-back">学习笔记</div>
         <div class="single-bar-content single-bar-content-dark">
           <p>学习笔记</p>
@@ -113,7 +113,7 @@
           </p>
         </div>
       </div>
-      <div class="second-single-bar single-bar">
+      <div class="up-single-bar single-bar">
         <div class="single-bar-back">专业技能</div>
         <div class="single-bar-content single-bar-content-dark">
           <p>专业技能</p>
@@ -123,7 +123,7 @@
           </p>
         </div>
       </div>
-      <div class="third-single-bar single-bar">
+      <div class="down-single-bar single-bar">
         <div class="single-bar-back single-bar-dark">项目经历</div>
         <div class="single-bar-content single-bar-content-light">
           <p>项目经历</p>
@@ -135,11 +135,11 @@
           </p>
         </div>
       </div>
-      <div class="fourth-single-bar single-bar">
+      <div class="down-single-bar single-bar">
         <div class="single-bar-back single-bar-dark">关于本站</div>
         <div class="single-bar-content single-bar-content-light">
           <p>关于本站</p>
-          <p style="font-size: 15px;">
+          <p style="font-size: 15px">
             关于本站是如何炼成的，怎么从一张白纸构思出了现在这样，使用了哪些基础样式和JavaScript方法等等。虽然作为静态页面技术性并不强，但也是我用心做并且花进去不少时间的。感兴趣就看看吧！
           </p>
           <p>
