--- a/algorithm.html
+++ b/algorithm.html
@@ -106,20 +106,20 @@
     <div class="full-index-title"></div>
     <div class="full-index-content">
       <div class="single-content-title">LeetCode</div>
-      <div class="single-content">
+      <!-- <div class="single-content">
         <a href="" target="_blank">
           <div>移动窗口法</div>
         </a>
         <a href="https://juejin.cn/post/6934362238815830030" target="_blank">
           <div>1 什么是JavaScript</div>
         </a>
-      </div>
+      </div> -->
       <div class="single-content">
         <a>
           <div>中心扩散法</div>
         </a>
-        <a href="https://juejin.cn/post/6949846494912446495/" target="_blank">
-          <div>1 什么是CSS</div>
+        <a href="https://github.com/zanlaihu/study-notes/blob/main/算法/中心扩散法/最长回文子串.js" target="_blank">
+          <div>最长回文子串</div>
         </a>
       </div>
     </div>
@@ -129,7 +129,7 @@
         <a>
           <div>十大排序算法</div>
         </a>
-        <a href="https://juejin.cn/post/6961048690903973896/" target="_blank">
+        <a href="https://github.com/zanlaihu/study-notes/blob/main/算法/十大排序算法/快速排序.js" target="_blank">
           <div>快速排序</div>
         </a>
       </div>
