--- a/journal.html
+++ b/journal.html
@@ -105,23 +105,15 @@
   <div class="full-index">
     <div class="full-index-title"></div>
     <div class="full-index-content">
-      <div class="single-content-title">7月</div>
-      <!-- <div class="single-content">
+      <div class="single-content-title">2021</div>
+      <div class="single-content">
         <a href="" target="_blank">
-          <div>移动窗口法</div>
+          <div>6月</div>
         </a>
-        <a href="https://juejin.cn/post/6934362238815830030" target="_blank">
-          <div>1 什么是JavaScript</div>
+        <a href="https://github.com/zanlaihu/study-notes/blob/main/日志/2021/6/6月总结.md" target="_blank">
+          <div>6月总结</div>
         </a>
       </div>
-      <div class="single-content">
-        <a>
-          <div>中心扩散法</div>
-        </a>
-        <a href="https://juejin.cn/post/6949846494912446495/" target="_blank">
-          <div>1 什么是CSS</div>
-        </a>
-      </div> -->
     </div>
   </div>
 
